...
  } catch (e) {
    yield put(requestFailure(Object.values(e.response.data)[0]));
  }
}

function* updateUserSuccessSaga() {
  yield call(Toast, "Successful update!");
}

function* updateImage({ payload }) {
  try {
    const token = yield select(getToken);
    const response = yield call(UserService.updateImage, payload.image, token);
...
